layers filename capitalized

--- a/P000137.opf/layers/v001/BookTitle.yml
+++ b/P000137.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 849854a078654a85bb1d04d90b3f5f4f
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
