--- a/P000137.opf/layers/v001/Quotation.yml
+++ b/P000137.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: f6cb6a518f4c48079b500fd1b63510d3
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 16f922f7e566409ebe5a3aebf90edd69
