--- a/P000137.opf/layers/v001/Chapter.yml
+++ b/P000137.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: 26d5219a0e3547128a10da16c0d5375f
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: b75e7468c43a4404b97b1cbe60d9123c
