corrected annotation_type

--- a/P000137.opf/layers/v001/Yigchung.yml
+++ b/P000137.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: e71742458fb940dd8f76934df88fe7a1
-annotation_type: Tsawa
+annotation_type: Yigchung
 revision: '00001'
 annotations:
   518e6656db3d4b23a01ea9dbcfc06ecb:
